--- a/views/static/css/style.css
+++ b/views/static/css/style.css
@@ -3,10 +3,7 @@
     margin: 0;
     color: black;
     text-decoration: none;
-}
-
-body {
-    background-color: green;
+    font-family: sans-serif;
 }
 
 h1 {
