--- a/views/baseView.html
+++ b/views/baseView.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
-    <style>
-        h1 {
-            font-family: sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/views/static/css/style.css">
     <title>{% title %}Default{% /title %}</title>
 </head>
 <body>
@@ -17,6 +12,6 @@
 
     {% body %}Default{% /body %}
 
-    <script src="static/js/script.js"></script>
+    <script src="/views/static/js/script.js"></script>
 </body>
 </html>
