--- a/views/user/userAddView.html
+++ b/views/user/userAddView.html
@@ -20,8 +20,8 @@
     <input type="submit" value="Добавить">
     <br>
 
-    <h3 class="mistake">
-        {{ mistake }}
+    <h3 class="error">
+        {{ error }}
     </h3>
 </form>
 
